# Prompts

./: .gitignore  08-SERVICES.md  CHANGELOG.md  README.md  contenido_legal_digishop.json
Agentes-Marketing/: 00-INICIO-RAPIDO.md  01-SKILLS.md  02-ROADMAP-PROMPTS.md  03-FLOW-PODCAST.md  04-ARQUITECTURA-DE-USO.md  05-ESTANDAR-DE-CALIDAD.md  06-MAPA-POR-ROLES.md  07-MAPA-VISUAL-EXPLORACION.md  09-SERVICE-MATRIX.md  10-PRICING-INTERNO.md  11-REGLAS-DE-COTIZACION.md  12-BRIEFS-POR-SERVICIO.md  13-FLUJO-COMERCIAL-Y-OPERATIVO.md  14-MARCO-LEGAL-COMERCIAL.md  15-BASE-DE-CONOCIMIENTO-COMERCIAL.md  16-ARQUITECTURA-DATOS-AUTOMATIZACION.md  Agentes  Manuales-Produccion  Prompts-Operativos  README.md
app/: README.md
app/cli/: README.md  pyproject.toml
app/cli/live_dev/: __init__.py  main.py
archive/: README.md
base/: README.md
docs/: AGENT-COMPATIBILITY-MATRIX.md  AGENT-ENTRY-CONTEXT.md  AGENT-EVAL-RUNS.md  AGENT-EVAL-TEMPLATE.md  AGENT-INTAKE-STANDARD.md  AGENT-LEARNINGS.md  AGENT-MODE-DISCOVER.md  AGENT-MODE-EXECUTE.md  AGENT-MODE-PLAN.md  AGENT-MODE-QUOTE.md  AGENT-MODE-REVIEW.md  AGENT-MODE-UPSELL.md  AGENT-OPERATING-PROTOCOL.md  AGENT-OUTPUT-STANDARD.md  AGENT-STARTER-PROMPT.md  ARQUITECTURA-FUNCIONAL.md  ARQUITECTURA-MINIMA-RUNTIME-5D.md  FASE-1-BLOQUE-1A.md  FASE-1-BLOQUE-1B.md  FASE-1-BLOQUE-1C.md  FASE-1-BLOQUE-1D.md  FASE-2-BLOQUE-2A.md  FASE-2-BLOQUE-2B.md  FASE-2-BLOQUE-2C.md  FASE-2-BLOQUE-2D.md  FASE-3-BLOQUE-3A.md  FASE-3-BLOQUE-3B.md  FASE-3-BLOQUE-3C.md  FASE-4-BLOQUE-4A.md  FASE-4-BLOQUE-4B.md  FASE-4-BLOQUE-4C.md  FASE-5-BLOQUE-5A.md  FASE-5-BLOQUE-5B.md  (+31 more)
(+382 files in other folders)
