[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live-dev"
version = "0.1.0"
description = "CLI tool para navegar el workspace de Live Developer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
ld = "live_dev.main:app"
live = "live_dev.main:app"
live-dev = "live_dev.main:app"

[tool.hatch.build.targets.wheel]
packages = ["live_dev"]
